# Network-Dataset-Generator-web-app

./: .gitignore  CHANGES.md  CMakeLists.txt  EMPTY_CSV_DEBUG.md  README.md  TROUBLESHOOTING.md  WHY_NO_PACKETS.md  setup.bat  start.bat  test_with_traffic.bat
include/: DatasetWriter.h  PacketCapturer.h  PacketFeature.h  PacketParser.h
src/: DatasetWriter.cpp  PacketCapturer.cpp  PacketParser.cpp  main.cpp  main_clean.cpp
web/: README.md  package-lock.json  package.json  test_capture.sh  test_interfaces_api.sh  tsconfig.json  vitest.config.ts
web/__tests__/: index.test.tsx
web/lib/: captureStore.ts
web/pages/: index.tsx
web/pages/api/: capture.ts  interfaces.ts  stop-capture.ts
web/public/: test-interfaces.html
web/styles/: globals.css  interactive.module.css
web/types/: css.d.ts
